Diagnostics - separate log level testing to a separate button

--- a/TASVideos/Pages/Diagnostics/Index.cshtml
+++ b/TASVideos/Pages/Diagnostics/Index.cshtml
@@ -79,3 +79,5 @@
 <form method="post" asp-page-handler="Make500">
 	<button type="submit" class="btn btn-danger">Make a 500 Error</button>
 </form>
+
+<a class="btn btn-primary mt-2" asp-page-handler="TestLogLevels">Test log levels</a>
