Diagnostics - improve logging diagnostics

--- a/TASVideos/Pages/Diagnostics/Index.cshtml
+++ b/TASVideos/Pages/Diagnostics/Index.cshtml
@@ -32,6 +32,7 @@
 	<li><a asp-page="ExternalDependencies">External Dependencies</a></li>
 	<li><a asp-page="PlayerPoints">Player Points</a></li>
 	<li><a asp-page="WikiSyntaxErrors">Wiki Syntax Errors</a></li>
+	<li><a asp-page="Logging">Logging</a></li>
 </ul>
 
 <table class="table table-bordered table-striped">
@@ -79,5 +80,3 @@
 <form method="post" asp-page-handler="Make500">
 	<button type="submit" class="btn btn-danger">Make a 500 Error</button>
 </form>
-
-<a class="btn btn-primary mt-2" asp-page-handler="TestLogLevels">Test log levels</a>
