--- a/TASVideos/Pages/Diagnostics/Logging.cshtml
+++ b/TASVideos/Pages/Diagnostics/Logging.cshtml
@@ -13,8 +13,8 @@
 	</tr>
 	<tr><td>Trace</td><td>@_logger.IsEnabled(LogLevel.Trace)</td></tr>
 	<tr><td>Debug</td><td>@_logger.IsEnabled(LogLevel.Debug)</td></tr>
-	<tr><td>Debug</td><td>@_logger.IsEnabled(LogLevel.Information)</td></tr>
-	<tr><td>Debug</td><td>@_logger.IsEnabled(LogLevel.Warning)</td></tr>
-	<tr><td>Debug</td><td>@_logger.IsEnabled(LogLevel.Error)</td></tr>
-	<tr><td>Debug</td><td>@_logger.IsEnabled(LogLevel.Critical)</td></tr>
+	<tr><td>Information</td><td>@_logger.IsEnabled(LogLevel.Information)</td></tr>
+	<tr><td>Warning</td><td>@_logger.IsEnabled(LogLevel.Warning)</td></tr>
+	<tr><td>Error</td><td>@_logger.IsEnabled(LogLevel.Error)</td></tr>
+	<tr><td>Critical</td><td>@_logger.IsEnabled(LogLevel.Critical)</td></tr>
 </table>
