Standardize site on ES6
Drops toArray helper for Array.from
Replaces uses of var with let and const
let and const allow dropping IIFEs for simple block scope
no need to reference window when getting and removing from localstorage

--- a/TASVideos/Pages/Forum/Topics/Create.cshtml
+++ b/TASVideos/Pages/Forum/Topics/Create.cshtml
@@ -15,28 +15,22 @@
 			<partial name="_PollCreate" model="new PollCreateModel()" />
 		</div>
 		<script>
-			(function () {
-				var pollContainer = document.getElementById('poll-container');
+			{
+				let pollContainer = document.getElementById('poll-container');
 				document.getElementById('add-poll-btn').onclick = function () {
 					document.getElementById('add-poll-btn').classList.add('d-none');
 					pollContainer.classList.remove('d-none');
-					pollContainer.querySelectorAll('input')
-						.toArray()
-						.forEach(function (elem) {
-							elem.disabled = false;
-						});
+					Array.from(pollContainer.querySelectorAll('input'))
+						.forEach(element => element.disabled = false);
 				}
 
 				document.getElementById('poll-close').onclick = function () {
 					document.getElementById('add-poll-btn').classList.remove('d-none');
 					pollContainer.classList.add('d-none');
-					pollContainer.querySelectorAll('input')
-						.toArray()
-						.forEach(function (elem) {
-							elem.disabled = true;
-						});
+					Array.from(pollContainer.querySelectorAll('input'))
+						.forEach(element => element.disabled = true);
 				}
-			})();
+			}
 		</script>
 		<hr />
 	</div>
