--- a/TASVideos/Pages/Forum/Topics/Merge.cshtml
+++ b/TASVideos/Pages/Forum/Topics/Merge.cshtml
@@ -40,13 +40,13 @@
 }
 
 <script>
-	(function () {
-		var forumModel = document.getElementById('@Html.IdFor(m => m.Topic.DestinationForumId)');
-		var topicModel = document.getElementById('@Html.IdFor(m => m.Topic.DestinationTopicId)');
+	{
+		let forumModel = document.getElementById('@Html.IdFor(m => m.Topic.DestinationForumId)');
+		let topicModel = document.getElementById('@Html.IdFor(m => m.Topic.DestinationTopicId)');
 
 		forumModel.onchange = function () {
 			console.log('forum changed');
-			var xmlhttp = new XMLHttpRequest();
+			let xmlhttp = new XMLHttpRequest();
 			xmlhttp.onreadystatechange = function() {
 				if (xmlhttp.readyState === XMLHttpRequest.DONE) {
 					if (xmlhttp.status === 200) {
@@ -58,5 +58,5 @@
 			xmlhttp.open("GET", "/Forum/Topics/Merge/@(Model.Id)?handler=TopicsForForum&forumId=" + this.value, true);
 			xmlhttp.send();
 		}
-	})()
+	}
 </script>
