--- a/TASVideos/Pages/Submissions/Edit.cshtml
+++ b/TASVideos/Pages/Submissions/Edit.cshtml
@@ -121,16 +121,16 @@
 <partial name="_PreviewWindow" model="@(Html.IdFor(m => m.Submission.Markup), "/Wiki/Preview")" />
 
 <script>
-	(function () {
+	{
 		document.getElementById('@Html.IdFor(m => m.Submission.Status)').addEventListener("change", function () {
-			var reject = '@((int)SubmissionStatus.Rejected)';
+			const reject = '@((int)SubmissionStatus.Rejected)';
 			if (this.value === reject) {
 				document.getElementById('rejection-reason').classList.remove('d-none');
 			} else {
 				document.getElementById('rejection-reason').classList.add('d-none');
 			}
 		});
-	})();
+	}
 </script>
 
 @section Scripts {
