--- a/TASVideos/Pages/Account/Register.cshtml
+++ b/TASVideos/Pages/Account/Register.cshtml
@@ -65,21 +65,16 @@
 	</div>
 </form>
 <script>
-	(function () {
-		var selected = document
-			.querySelector('#@nameof(Model.SelectedTimeZone) optgroup option:checked');
+	{
+		let selected = document.querySelector('#@nameof(Model.SelectedTimeZone) optgroup option:checked');
 		selected.removeAttribute('selected');
 
-		var timezoneOffset = 0 - new Date().getTimezoneOffset();
-		var timezone = document
-			.querySelectorAll('#@nameof(Model.SelectedTimeZone) optgroup option')
-			.toArray()
-			.filter(function (option) {
-				return option.getAttribute('data-offset') == timezoneOffset;
-			})[0];
+		const timezoneOffset = 0 - new Date().getTimezoneOffset();
+		let timezone = Array.from(document.querySelectorAll('#@nameof(Model.SelectedTimeZone) optgroup option'))
+			.filter(option => option.getAttribute('data-offset') == timezoneOffset)[0];
 
 		timezone.setAttribute('selected', 'selected');
-	})();
+	}
 </script>
 @section Scripts {
 	<partial name="_ValidationScriptsPartial" />
