--- a/TASVideos/Pages/Forum/Edit.cshtml
+++ b/TASVideos/Pages/Forum/Edit.cshtml
@@ -46,25 +46,25 @@
 	</form-button-bar>
 </form>
 <script>
-	function IncrementOrdinal(elem) {
-		var parent = elem.closest('.forum-section');
-		var index = parseInt(parent.dataset.index);
+	function IncrementOrdinal(element) {
+		let parent = element.closest('.forum-section');
+		const index = parseInt(parent.dataset.index);
 
-		var last = document.querySelectorAll('.forum-section').length;
+		const last = document.querySelectorAll('.forum-section').length;
 		if (index >= last - 1) {
 			return;
 		}
 
-		var thisO = document.getElementById('Category_Forums_' + index + '__Ordinal');
-		var nextO = document.getElementById('Category_Forums_' + (index + 1) + '__Ordinal');
+		let thisO = document.getElementById('Category_Forums_' + index + '__Ordinal');
+		let nextO = document.getElementById('Category_Forums_' + (index + 1) + '__Ordinal');
 
-		var thisOVal = thisO.value;
-		var nextOVal = nextO.value;
+		const thisOVal = thisO.value;
+		const nextOVal = nextO.value;
 
 		thisO.value = nextOVal;
 		nextO.value = thisOVal;
 
-		var nextSection = document.querySelector('.forum-section[data-index="' + (index + 1) + '"]');
+		let nextSection = document.querySelector('.forum-section[data-index="' + (index + 1) + '"]');
 
 		parent.dataset.index = index + 1;
 		nextSection.dataset.index = index;
@@ -72,23 +72,23 @@
 		SortForums();
 	}
 
-	function DecrementOrdinal(elem) {
-		var parent = elem.closest('.forum-section');
-		var index = parseInt(parent.dataset.index);
+	function DecrementOrdinal(element) {
+		let parent = element.closest('.forum-section');
+		const index = parseInt(parent.dataset.index);
 		if (index <= 0) {
 			return;
 		}
 
-		var thisO = document.getElementById('Category_Forums_' + index + '__Ordinal');
-		var prevO = document.getElementById('Category_Forums_' + (index - 1) + '__Ordinal');
+		let thisO = document.getElementById('Category_Forums_' + index + '__Ordinal');
+		let prevO = document.getElementById('Category_Forums_' + (index - 1) + '__Ordinal');
 
-		var thisOVal = thisO.value;
-		var prevOVal = prevO.value;
+		const thisOVal = thisO.value;
+		const prevOVal = prevO.value;
 
 		thisO.value = prevOVal;
 		prevO.value = thisOVal;
 
-		var prevSection = document.querySelector('.forum-section[data-index="' + (index - 1) + '"]');
+		let prevSection = document.querySelector('.forum-section[data-index="' + (index - 1) + '"]');
 		parent.dataset.index = index - 1;
 		prevSection.dataset.index = index;
 
@@ -96,32 +96,28 @@
 	}
 
 	function SortForums() {
-		var sections = document
-			.querySelectorAll('.forum-section')
-			.toArray()
-			.sort(function (a, b) {
-				return a.dataset.index - b.dataset.index;
-			});
+		let sections = Array.from(document.querySelectorAll('.forum-section'))
+			.sort((a, b) => a.dataset.index - b.dataset.index);
 
-		var container = document.getElementById('forum-container');
+		let container = document.getElementById('forum-container');
 		while (container.firstChild) {
 			container.removeChild(container.firstChild);
 		}
 
-		for (var i in sections) {
-			var ord = sections[i].querySelectorAll('[id$="Ordinal"]')[0];
+		for (const i in sections) {
+			let ord = sections[i].querySelectorAll('[id$="Ordinal"]')[0];
 			ord.setAttribute('id', 'Category_Forums_' + i + '__Ordinal');
 			ord.setAttribute('name', 'Category_Forums[' + i + '].Ordinal');
 
-			var id = sections[i].querySelectorAll('[id$="Id"]')[0];
+			let id = sections[i].querySelectorAll('[id$="Id"]')[0];
 			id.setAttribute('id', 'Category_Forums_' + i + '__Id');
 			id.setAttribute('name', 'Category_Forums[' + i + '].Id');
 
-			var name = sections[i].querySelectorAll('[id$="Name"]')[0];
+			let name = sections[i].querySelectorAll('[id$="Name"]')[0];
 			name.setAttribute('id', 'Category_Forums_' + i + '__Name');
 			name.setAttribute('name', 'Category_Forums[' + i + '].Name');
 
-			var description = sections[i].querySelectorAll('[id$="Description"]')[0];
+			let description = sections[i].querySelectorAll('[id$="Description"]')[0];
 			description.setAttribute('id', 'Category_Forums_' + i + '__Description');
 			description.setAttribute('name', 'Category_Forums[' + i + '].Description');
 
