--- a/TASVideos/Pages/Messages/Create.cshtml
+++ b/TASVideos/Pages/Messages/Create.cshtml
@@ -48,31 +48,31 @@
 <partial name="_PreviewWindow" model="@((nameof(Model.Text), "/Forum/Preview"))" />
 
 <script>
-	(function () {
-		var searchBox = document.getElementById('@Html.IdFor(m => m.ToUser)');
+	{
+		let searchBox = document.getElementById('@Html.IdFor(m => m.ToUser)');
 		searchBox.onkeyup = function () {
-			var searchVal = searchBox.value.trim();
-			var dataListId = 'search-username-list-' + searchVal;
+			const searchVal = searchBox.value.trim();
+			const dataListId = 'search-username-list-' + searchVal;
 			if (searchVal.length > 2) {
-				var existingList = document.getElementById(dataListId);
+				const existingList = document.getElementById(dataListId);
 				if (existingList) {
 					searchBox.setAttribute('list', dataListId);
 					return;
 				}
 
-				var xmlhttp = new XMLHttpRequest();
+				let xmlhttp = new XMLHttpRequest();
 
 				xmlhttp.onreadystatechange = function() {
 					if (xmlhttp.readyState === XMLHttpRequest.DONE) {
 						if (xmlhttp.status === 200) {
-							var newSearchList = document.createElement('datalist');
+							let newSearchList = document.createElement('datalist');
 							newSearchList.id = dataListId;
 
-							var data = JSON.parse(xmlhttp.responseText);
+							const data = JSON.parse(xmlhttp.responseText);
 
-							for (var i in data) {
+							for (const i in data) {
 								if (data.hasOwnProperty(i)) {
-									var option = document.createElement('option');
+									let option = document.createElement('option');
 									option.innerHTML = data[i];
 
 									newSearchList.appendChild(option);
@@ -94,11 +94,11 @@
 
 		if (document.getElementById('quote-btn')) {
 			document.getElementById('quote-btn').onclick = function () {
-				var text = document.getElementById('replying-to-text').innerHTML;
+				const text = document.getElementById('replying-to-text').innerHTML;
 				document.getElementById('@Html.IdFor(m => m.Text)').innerHTML = '[quote]' + text + '[/quote]';
 			};
 		}
-	})();
+	}
 </script>
 @section Scripts {
 	<partial name="_ValidationScriptsPartial" />
