--- a/TASVideos/Pages/Publications/EditFiles.cshtml
+++ b/TASVideos/Pages/Publications/EditFiles.cshtml
@@ -57,9 +57,9 @@
 	</row>
 </form>
 <script>
-	(function () {
-		var typeModel = document.getElementById('@nameof(Model.Type)');
-		var descriptionForm = document.getElementById('description-group');
+	{
+		let typeModel = document.getElementById('@nameof(Model.Type)');
+		let descriptionForm = document.getElementById('description-group');
 		typeModel.onchange = function () {
 			if (this.value == 0) {
 				descriptionForm.classList.remove('d-none');
@@ -67,7 +67,7 @@
 				descriptionForm.classList.add('d-none');
 			}
 		};
-	})()
+	}
 </script>
 
 @section Scripts {
