--- a/TASVideos/Pages/Forum/_CreatePostHelper.cshtml
+++ b/TASVideos/Pages/Forum/_CreatePostHelper.cshtml
@@ -10,17 +10,17 @@
 	<button type="button" class="btn bg-info text-dark btn-sm" tabindex="-1" data-fmt="[sup],[/sup]" data-skey="+"><sup>sup</sup></button>
 </div>
 
-<div class="btn-group mt-1 mb-1">
-	<button type="button" class="btn bg-info text-dark btn-sm" tabindex="-1" data-fmt="[quote],[/quote]" data-akey=q>quote</button>
-	<button type="button" class="btn bg-info text-dark btn-sm" tabindex="-1" data-fmt="[url],[/url]" data-akey=w>url</button>
-	<button type="button" class="btn bg-info text-dark btn-sm" tabindex="-1" data-fmt="[email],[/email]" data-akey=e>email</button>
-	<button type="button" class="btn bg-info text-dark btn-sm" tabindex="-1" data-fmt="[img],[/img]" data-akey=p>img</button>
-	<button type="button" class="btn bg-info text-dark btn-sm" tabindex="-1" data-fmt="[code],[/code]" data-akey=c>code</button>
-	<button type="button" class="btn bg-info text-dark btn-sm" tabindex="-1" data-fmt="[noparse],[/noparse]">noparse</button>
-	<button type="button" class="btn bg-info text-dark btn-sm" tabindex="-1" data-fmt="[spoiler],[/spoiler]">spoiler</button>
-	<button type="button" class="btn bg-info text-dark btn-sm" tabindex="-1" data-fmt="[warning],[/warning]">warning</button>
-	<button type="button" class="btn bg-info text-dark btn-sm" tabindex="-1" data-fmt="[note],[/note]">note</button>
-	<button type="button" class="btn bg-info text-dark btn-sm" tabindex="-1" data-fmt="[highlight],[/highlight]">highlight</button>
+<div class="btn-group mt-1 mb-1 flex-wrap">
+	<button type="button" class="btn bg-info text-dark btn-sm flex-grow-0" tabindex="-1" data-fmt="[quote],[/quote]" data-akey=q>quote</button>
+	<button type="button" class="btn bg-info text-dark btn-sm flex-grow-0" tabindex="-1" data-fmt="[url],[/url]" data-akey=w>url</button>
+	<button type="button" class="btn bg-info text-dark btn-sm flex-grow-0" tabindex="-1" data-fmt="[email],[/email]" data-akey=e>email</button>
+	<button type="button" class="btn bg-info text-dark btn-sm flex-grow-0" tabindex="-1" data-fmt="[img],[/img]" data-akey=p>img</button>
+	<button type="button" class="btn bg-info text-dark btn-sm flex-grow-0" tabindex="-1" data-fmt="[code],[/code]" data-akey=c>code</button>
+	<button type="button" class="btn bg-info text-dark btn-sm flex-grow-0" tabindex="-1" data-fmt="[noparse],[/noparse]">noparse</button>
+	<button type="button" class="btn bg-info text-dark btn-sm flex-grow-0" tabindex="-1" data-fmt="[spoiler],[/spoiler]">spoiler</button>
+	<button type="button" class="btn bg-info text-dark btn-sm flex-grow-0" tabindex="-1" data-fmt="[warning],[/warning]">warning</button>
+	<button type="button" class="btn bg-info text-dark btn-sm flex-grow-0" tabindex="-1" data-fmt="[note],[/note]">note</button>
+	<button type="button" class="btn bg-info text-dark btn-sm flex-grow-0" tabindex="-1" data-fmt="[highlight],[/highlight]">highlight</button>
 </div>
 
 <div class="btn-group mt-1 mb-1">
@@ -36,17 +36,17 @@
 	<button type="button" class="btn btn-secondary btn-sm" tabindex="-1" data-fmt="[table][tr][td],[/td][/tr][/table]">table</button>
 </div>
 
-<div class="btn-group mt-1 mb-1">
-	<button type="button" class="btn btn-success btn-sm" tabindex="-1" data-fmt="[frames],[/frames]">frames</button>
-	<button type="button" class="btn btn-success btn-sm" tabindex="-1" data-fmt="[video],[/video]" data-akey=v>video</button>
-	<button type="button" class="btn btn-success btn-sm" tabindex="-1" data-fmt="[google],[/google]">google</button>
-	<button type="button" class="btn btn-success btn-sm" tabindex="-1" data-fmt="[thread],[/thread]">thread</button>
-	<button type="button" class="btn btn-success btn-sm" tabindex="-1" data-fmt="[post],[/post]">post</button>
-	<button type="button" class="btn btn-success btn-sm" tabindex="-1" data-fmt="[movie],[/movie]">movie</button>
-	<button type="button" class="btn btn-success btn-sm" tabindex="-1" data-fmt="[submission],[/submission]">submission</button>
-	<button type="button" class="btn btn-success btn-sm" tabindex="-1" data-fmt="[wiki],[/wiki]">wiki</button>
-	<button type="button" class="btn btn-success btn-sm" tabindex="-1" data-fmt="[userfile],[/userfile]">userfile</button>
-	<button type="button" class="btn btn-success btn-sm" tabindex="-1" data-fmt="[wip],[/wip]">wip</button>
+<div class="btn-group mt-1 mb-1 flex-wrap">
+	<button type="button" class="btn btn-success btn-sm flex-grow-0" tabindex="-1" data-fmt="[frames],[/frames]">frames</button>
+	<button type="button" class="btn btn-success btn-sm flex-grow-0" tabindex="-1" data-fmt="[video],[/video]" data-akey=v>video</button>
+	<button type="button" class="btn btn-success btn-sm flex-grow-0" tabindex="-1" data-fmt="[google],[/google]">google</button>
+	<button type="button" class="btn btn-success btn-sm flex-grow-0" tabindex="-1" data-fmt="[thread],[/thread]">thread</button>
+	<button type="button" class="btn btn-success btn-sm flex-grow-0" tabindex="-1" data-fmt="[post],[/post]">post</button>
+	<button type="button" class="btn btn-success btn-sm flex-grow-0" tabindex="-1" data-fmt="[movie],[/movie]">movie</button>
+	<button type="button" class="btn btn-success btn-sm flex-grow-0" tabindex="-1" data-fmt="[submission],[/submission]">submission</button>
+	<button type="button" class="btn btn-success btn-sm flex-grow-0" tabindex="-1" data-fmt="[wiki],[/wiki]">wiki</button>
+	<button type="button" class="btn btn-success btn-sm flex-grow-0" tabindex="-1" data-fmt="[userfile],[/userfile]">userfile</button>
+	<button type="button" class="btn btn-success btn-sm flex-grow-0" tabindex="-1" data-fmt="[wip],[/wip]">wip</button>
 </div>
 <script>
 	document.addEventListener("DOMContentLoaded", function installButtonEvents() {
