--- a/TASVideos/Pages/Account/ResetPassword.cshtml
+++ b/TASVideos/Pages/Account/ResetPassword.cshtml
@@ -14,17 +14,17 @@
 			<input asp-for="Code" type="hidden" />
 			<form-group>
 				<label asp-for="Email"></label>
-				<input asp-for="Email" class="form-control" />
+				<input asp-for="Email" class="form-control" autocomplete="email" />
 				<span asp-validation-for="Email" class="text-danger"></span>
 			</form-group>
 			<form-group>
 				<label asp-for="Password"></label>
-				<input asp-for="Password" class="form-control" />
+				<input asp-for="Password" class="form-control" autocomplete="new-password" />
 				<span asp-validation-for="Password" class="text-danger"></span>
 			</form-group>
 			<form-group>
 				<label asp-for="ConfirmPassword"></label>
-				<input asp-for="ConfirmPassword" class="form-control" />
+				<input asp-for="ConfirmPassword" class="form-control" autocomplete="new-password" />
 				<span asp-validation-for="ConfirmPassword" class="text-danger"></span>
 			</form-group>
 			<button type="submit" class="btn btn-secondary">Reset</button>
