--- a/TASVideos/Pages/Profile/ChangePassword.cshtml
+++ b/TASVideos/Pages/Profile/ChangePassword.cshtml
@@ -11,17 +11,17 @@
 			<div asp-validation-summary="All" class="text-danger"></div>
 			<form-group>
 				<label asp-for="OldPassword"></label>
-				<input asp-for="OldPassword" class="form-control" />
+				<input asp-for="OldPassword" class="form-control" autocomplete="current-password" />
 				<span asp-validation-for="OldPassword" class="text-danger"></span>
 			</form-group>
 			<form-group>
 				<label asp-for="NewPassword"></label>
-				<input asp-for="NewPassword" class="form-control" />
+				<input asp-for="NewPassword" class="form-control" autocomplete="new-password" />
 				<span asp-validation-for="NewPassword" class="text-danger"></span>
 			</form-group>
 			<form-group>
 				<label asp-for="ConfirmPassword"></label>
-				<input asp-for="ConfirmPassword" class="form-control" />
+				<input asp-for="ConfirmPassword" class="form-control" autocomplete="new-password" />
 				<span asp-validation-for="ConfirmPassword" class="text-danger"></span>
 			</form-group>
 			<button type="submit" class="btn btn-secondary">Update password</button>
