--- a/TASVideos/Pages/Diagnostics/Index.cshtml
+++ b/TASVideos/Pages/Diagnostics/Index.cshtml
@@ -37,7 +37,8 @@
 
 <table class="table table-bordered table-striped">
 	<tr><td>Version</td><td>@ViewData["Version"]</td></tr>
-	<tr><td>Environment Name</td><td>@_env.EnvironmentName</td></tr>
+	<tr><td>IWebHostEnvironment Name</td><td>@_env.EnvironmentName</td></tr>
+	<tr><td>ASPNETCORE_ENVIRONMENT</td><td>@Environment.GetEnvironmentVariable("ASPNETCORE_ENVIRONMENT")</td></tr>
 	<tr><td>MachineName</td><td>@Environment.MachineName</td></tr>
 	<tr><td>Is 64 Bit</td><td>@Environment.Is64BitOperatingSystem</td></tr>
 	<tr><td>OS Version</td><td>@Environment.OSVersion.ToString()</td></tr>
