--- a/TASVideos/Pages/Shared/_MovieModule.cshtml
+++ b/TASVideos/Pages/Shared/_MovieModule.cshtml
@@ -172,9 +172,14 @@
 				</small>
 			</div>
 			<div class="col-auto">
-				<small condition="!string.IsNullOrWhiteSpace(Model.MirrorSiteUrl) || Model.TorrentLinks.Any()">
+				<small condition="Model.MirrorSiteUrls.Any() || Model.TorrentLinks.Any()">
 					A/V files:<br />
-					<a condition="@(!string.IsNullOrWhiteSpace(Model.MirrorSiteUrl))" href="@Model.MirrorSiteUrl" class="ms-2">A/V file via Mirror<br /></a>
+					<span condition="Model.MirrorSiteUrls.Any()">
+						@foreach (var url in Model.MirrorSiteUrls)
+						{
+							<a href="@url" class="ms-2">A/V file via Mirror<br /></a>
+						}
+					</span>
 					<span condition="Model.TorrentLinks.Any()">
 						@foreach (var torrent in Model.TorrentLinks)
 						{
