Add a default fallback for open graph tags and refine submissions

--- a/TASVideos/Pages/Publications/View.cshtml
+++ b/TASVideos/Pages/Publications/View.cshtml
@@ -10,7 +10,8 @@
 
 @section Header {
 	<meta property="og:type" content="article" />
-	<meta property="og:title" content="@(ViewData["Title"])" />
+	<meta property="og:title" content="TASVideos" />
+	<meta property="og:description" content="@(ViewData["Title"])" />
 	<meta property="og:url" content="@(currentUrl)" />
 	<meta property="og:image" content="@($"{baseUrl}/media/{Model.Publication.Screenshot.Path}")" />
 }
