--- a/TASVideos/Pages/Shared/_Layout.cshtml
+++ b/TASVideos/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,10 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http
+@{
+	HttpRequest request = Context.Request;
+	string baseUrl = $"{request.Scheme}://{request.Host}{request.PathBase}";
+	string currentUrl = $"{request.Scheme}://{request.Host}{request.PathBase}{request.Path}";
+}
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8" />
@@ -27,6 +33,15 @@
 
 	@if (IsSectionDefined("Header")) {
 		@await RenderSectionAsync("Header")
+	} else
+	{
+		{
+			<meta property="og:type" content="article" />
+			<meta property="og:title" content="TASVideos" />
+			<meta property="og:description" content="Tool-assisted game movies - When human skills are just not enough" />
+			<meta property="og:url" content="@(currentUrl)" />
+			<meta property="og:image" content="@($"{baseUrl}/images/logo-light-4x.png")" />
+		}
 	}
 </head>
 <body>
